# transitio

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yaml
crates/beanpicker-gtfs/: Cargo.toml
crates/beanpicker-gtfs/src/: fields.rs  lib.rs  rules.rs  scan.rs
crates/beanpicker-py/src/: lib.rs
crates/transitio-gtfs/: Cargo.toml
crates/transitio-gtfs/src/: crop.rs  lib.rs  notice.rs  repair.rs  rules.rs  scan.rs  schema.rs  semantics.rs
crates/transitio-py/: Cargo.toml
crates/transitio-py/src/: lib.rs
docs/: conf.py  index.rst  installation.md  quickstart.md  reference.rst  requirements.txt
python/beanpicker/: __init__.py  exceptions.py
python/beanpicker/catalog/: _client.py  _csv.py  _models.py
python/beanpicker/osm/: __init__.py  _fetch.py
python/beanpicker/report/: __init__.py  _report.py
python/beanpicker/validate/: _structure.py
python/transitio/: __init__.py  _cli.py  exceptions.py
python/transitio/catalog/: __init__.py  _client.py  _csv.py  _models.py
python/transitio/edit/: __init__.py  _build.py  _editor.py  _osm.py  _snap.py
python/transitio/gtfs/: __init__.py  _crop.py
python/transitio/osm/: __init__.py  _fetch.py
python/transitio/pipeline/: __init__.py  _fetch.py
python/transitio/repair/: __init__.py  _repair.py
python/transitio/report/: __init__.py  _report.py
python/transitio/validate/: __init__.py  _structure.py
scripts/: benchmark_validator.py  fetch_test_data.py
tests/: conftest.py  test_benchmark.py  test_build.py  test_catalog.py  test_cli.py  test_crop.py  test_edit.py  test_integration.py  test_osm.py  test_osm_edit.py  test_package.py  test_pipeline.py  test_regressions.py  test_repair.py  test_report.py  test_validate.py
