[workspace]
resolver = "2"
members = ["crates/beanpicker-gtfs", "crates/beanpicker-py"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
chrono-tz = "0.10"
csv = "1.4"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "8.6"

[profile.release]
lto = "thin"

[profile.dev.package."*"]
opt-level = 2
