[workspace]
resolver = "2"
members = ["crates/transitio-gtfs", "crates/transitio-py"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
csv = "1.4"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "8.6"

[profile.release]
lto = "thin"

[profile.dev.package."*"]
opt-level = 2
