[package]
name = "transitio-gtfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
